--- a/.github/worflows/rubocop.yml
+++ b/.github/worflows/rubocop.yml
@@ -7,6 +7,6 @@ jobs:
     - uses: actions/checkout@master
     - uses: actions/setup-ruby@v1
       with:
-        ruby-version: 2.6.x
-    - run: gem install rubocop:0.61.0
+        ruby-version: 2.7.1
+    - run: gem install rubocop:1.1
     - run: rubocop --parallel
