--- a/.github/worflows/linters.yml
+++ b/.github/worflows/linters.yml
@@ -10,7 +10,7 @@ jobs:
     name: Rubocop
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: 2.6.x
