--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "grouptransactions",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "4.3.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.0"
+  }
 }
