set_group and set_charge private methods, update readme file

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -44,7 +44,7 @@ Layout/HashAlignment:
   EnforcedColonStyle: key
 Layout/ExtraSpacing:
   AllowForAlignment: false
-Layout/Tab:
+Layout/IndentationStyle:
   Enabled: false
 Layout/MultilineMethodCallIndentation:
   Enabled: true
